# C-Static-Library-Starter

./: CMakeLists.txt  LICENSE  README.md
test/: CMakeLists.txt  test.c
